fix(styling): Remove light and dark mode for now, fix default font to match Atlas
The method of setting the font via CSS wasn't seeming to work - even with !important flag. Calling the font in the _quarto.yml instead. Also removing the light-dark mode for now as no time to make it look good

--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,9 @@
 }
 
 /* Main Styling */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); */
 
 :root {
-  color-scheme: light dark;
   --blue: #1e90ff;
   --white: #ffffff; 
   --atlasGreen: #2E7636;
@@ -27,9 +26,6 @@ figure {
 body {
   line-height: 1.6;
   font-size: 1.25rem;
-  font-family: "IBM Plex Sans", "Source Serif Pro";
-  color: light-dark(#333b3c, #efefec);
-  background-color: light-dark(white, #292929);
 }
 
 h1 {
@@ -170,5 +166,4 @@ a.toc-link.active {
   height: 175px;
   object-fit: cover;
   overflow: hidden;
-  /* margin-bottom: -23px; */
 }
